# CursesSnake

./: .gitignore  CursesSnake.sln  Food.cpp  LICENSE  Player.cpp  Player.h  README.md  SnakePlayer.cpp  fSnake  main.cpp  utils.cpp  utils.h
CursesSnake/: CMakeLists.txt  CursesSnake.rc  CursesSnake.vcxproj  CursesSnake.vcxproj.filters  Food.h  Game.cpp  Game.h  SnakePlayer.h  main.cpp  resource.h
CursesSnake/PDCurses/: pdcurses.lib
